--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vicoders/laravel-kit",
+    "name": "vicodersvn/laravel-kit",
     "description": "Extension kit for Laravel Project",
     "authors": [
         {
